# aidetour-chat

./: .gitignore  AidetourChatIcon.icns  Funnel.icns  Info.plist  README.md  aidetour-chat.iss  aidetour_chat.py  client_side_clipboard.py  cx_Freeze_setup.py  prev_aidetour_chat.py  pyproject.toml  setup.py  win_pyproject.toml  win_setup.py  x64 Native Tools Command Prompt for VS 2022 - poetry  shell.txt  x64 Native Tools Command Prompt for VS 2022 - powershell.txt
aidetourchat/: __init__.py  aidetour_chat.py  cookie_size.py  custom_session_cookie.py  js_custom_session_cookie.py  onAir.py  online_browser_localstorage.py
