[tool.poetry]
name = "aidetour-chat"
version = "0.1.0"
description = "Chat with multiple AI providers using your API keys."
authors = ["cleesmith"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
nicegui = "^2.2.0"
httpx = "^0.27.2"
pyperclip = "^1.9.0"
tinydb = "^4.8.0"
pywebview = "^5.2"
openai = "^1.50.2"
google-generativeai = "^0.8.2"
anthropic = "^0.34.2"
groq = "^0.11.0"
mistralai = "^1.1.0"
ollama = "^0.3.3"
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
