[tool.poetry]
name = "AidetourChat"
version = "1.0.0"
description = "Chat with multiple AI providers using your API keys."
authors = ["cleesmith <cleesmith2006@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# python = ">=3.10,<3.13"
nicegui = "^2.3.0"
httpx = "^0.27.2"
tinydb = "^4.8.0"
openai = "^1.50.2"
google-generativeai = "^0.8.2"
anthropic = "^0.34.2"
groq = "^0.11.0"
ollama = "^0.3.3"
pyperclip = "^1.9.0"
socks = "^0"
pysocks = "^1.7.1"
# pywebview = "^5.2"
# pythonnet = {version = "^3.0.4", platform = "win32"}

# [tool.poetry.group.dev.dependencies]
# pyinstaller = "^6.10.0"
cx-freeze = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

